# Rattuso

./: CMakeLists.txt  ManualMappingTest.sln  README.md  Rattuso.sln  build.bat  remove.bat  shell_update.exe.txt
DllTest/: DllTest.vcxproj  DllTest.vcxproj.filters  dllmain.cpp  embeds.h  general.cpp  general.h  injection.cpp  powershell.cpp  powershell.h
Encryption/: Encryption.cpp  Encryption.h  Encryption.vcxproj  Encryption.vcxproj.filters
MainDll/: DllTest.vcxproj.filters  MainDll.vcxproj  dllmain.cpp  embeds.h  general.h  injection.cpp  powershell.cpp
MainLoader/: MainLoader.rc  MainLoader.vcxproj  bypass.c  bypass.h  global.h  injection.cpp  injection.h  main.cpp  resource1.h  utils.cpp  utils.h
ManualMappingTest/: MainLoader.rc  ManualMappingTest.vcxproj  ManualMappingTest.vcxproj.filters  aic.c  aic.h  appinfo_c.c  appinfo_s.c  bypass.c  compress.c  embeds.h  global.h  injection.cpp  injection.h  main.cpp  pcasvc7_c.c  pcasvc7_s.c  pcasvc_c.c  pcasvc_s.c  resource1.h  stub.c  sup.c  sup.h  utils.cpp  utils.h
Server/: Server.vcxproj  main.cpp  server.cpp
ServerCrossPlatform/: CMakeLists.txt  Log.cpp  Log.h  Packet.cpp  Packet.h  PacketStructs.cpp  PacketStructs.h  PacketType.h  SendGetMethods.cpp  general.cpp  general.h  keylog.cpp  keylog.h  main.cpp  rattuso.rc  server.cpp  server.h  settings.cpp  settings.h
Shared/: folders.h  utility.cpp  utility.h
Shell/: FileTransferData.h  Lilith.vcxproj  Packet.cpp  Packet.h  PacketType.h  SendGetMethods.cpp  Shell.vcxproj  Shell.vcxproj.filters  bypass.h  client.cpp  client.h  cmdRedirect.cpp  cmdRedirect.h  (+19 more)
(+51 files in other folders)
